[gd_scene load_steps=15 format=3 uid="uid://dwdrpmng80awi"]

[ext_resource type="Script" path="res://Scripts/main_menu_logic.gd" id="1_1t6nl"]
[ext_resource type="FontFile" uid="uid://b7ka8etnt22qj" path="res://Font/PTSansCaption-Regular.ttf" id="1_mdhl7"]
[ext_resource type="Shader" path="res://Scripts/Background.gdshader" id="2_free4"]
[ext_resource type="Texture2D" uid="uid://5qlnuid4too" path="res://Sprites/Logo.png" id="3_h6gmi"]
[ext_resource type="Texture2D" uid="uid://c2ci1kb3ve3gd" path="res://Sprites/Background_Menu.png" id="3_yvhx8"]
[ext_resource type="Texture2D" uid="uid://je8puxrtx3o2" path="res://Sprites/button_none_shadow.png" id="5_7mvbf"]
[ext_resource type="PackedScene" uid="uid://b7yd6jv6svhv1" path="res://Scenes/choose_test.tscn" id="7_ga2xa"]
[ext_resource type="Texture2D" uid="uid://brb8ofapmi7gr" path="res://Sprites/button_outer.png" id="7_te37c"]
[ext_resource type="PackedScene" uid="uid://dafmdpgkkws2j" path="res://Scenes/settings.tscn" id="9_sypq2"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_pbqox"]
shader = ExtResource("2_free4")
shader_parameter/speed = 0.12
shader_parameter/is_menu = true
shader_parameter/angle = 1.0

[sub_resource type="Animation" id="Animation_bht8x"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Fade:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_iquwe"]
resource_name = "fade_in"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Fade:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(2.46229, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_whxbk"]
resource_name = "fade_out"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Fade:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(2.46, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wcydp"]
_data = {
"RESET": SubResource("Animation_bht8x"),
"fade_in": SubResource("Animation_iquwe"),
"fade_out": SubResource("Animation_whxbk")
}

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1t6nl")

[node name="MENU" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="BG" type="TextureRect" parent="MENU"]
material = SubResource("ShaderMaterial_pbqox")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_yvhx8")
stretch_mode = 1

[node name="logo" type="TextureRect" parent="MENU"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -257.5
offset_top = -130.0
offset_right = 257.5
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_h6gmi")

[node name="Button" type="Button" parent="MENU"]
custom_minimum_size = Vector2(350, 60)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -175.0
offset_top = 160.0
offset_right = 175.0
offset_bottom = 220.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_mdhl7")
theme_override_font_sizes/font_size = 24
flat = true

[node name="NinePatchRect" type="NinePatchRect" parent="MENU/Button"]
modulate = Color(0, 0.745098, 0.835294, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -6.0
offset_top = -6.0
offset_right = 6.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_7mvbf")
region_rect = Rect2(0, 0, 72, 72)
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 17

[node name="Label" type="Label" parent="MENU/Button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_mdhl7")
theme_override_font_sizes/font_size = 24
text = "Начать тест"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button_again" type="Button" parent="MENU"]
custom_minimum_size = Vector2(350, 60)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -175.0
offset_top = 231.0
offset_right = 175.0
offset_bottom = 291.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
focus_mode = 0
flat = true

[node name="NinePatchRect" type="NinePatchRect" parent="MENU/Button_again"]
modulate = Color(0, 0.745098, 0.835294, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -6.0
offset_top = -6.0
offset_right = 6.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_te37c")
region_rect = Rect2(0, 0, 72, 72)
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 17

[node name="Label" type="Label" parent="MENU/Button_again"]
modulate = Color(0, 0.745098, 0.835294, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_mdhl7")
theme_override_font_sizes/font_size = 24
text = "Настройки"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CenterContainer2" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="choose_test" parent="CenterContainer2" instance=ExtResource("7_ga2xa")]
layout_mode = 2
mouse_filter = 2
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="settings" parent="CenterContainer2" instance=ExtResource("9_sypq2")]
layout_mode = 2
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="Fade" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
metadata/_edit_lock_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_wcydp")
}

[connection signal="pressed" from="MENU/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="MENU/Button_again" to="." method="_on_button_again_pressed"]

[editable path="CenterContainer2/choose_test"]
